--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,4 +1,12 @@
 
+nav ul {
+  list-style: none;
+}
+
+nav ul li {
+  float: left;
+  padding: 15px;
+}
 
 
 @media only screen and (min-width: 640px) {
