--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,16 +1,17 @@
 
-nav ul {
+
+header nav ul {
   list-style: none;
 }
 
-nav ul li {
-  float: left;
-  padding: 15px;
+header nav ul li {
+  width: 100%;
+  text-align: center;
 }
 
 
-@media only screen and (min-width: 640px) {
+/* @media only screen and (min-width: 640px) {
   body {
   background-color: wheat;
   }
-}
+} */
