--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,7 +1,7 @@
 /* modules */
 
 
-header{
+header {
   margin: 10px;
 }
 
@@ -9,6 +9,12 @@ header{
 section h2 {
   font-size: 28px;
   text-align: center;
+}
+
+h3, label {
+  text-align: center;
+  font-size: 20px;
+  margin: 10px;
 }
 
 /* game-View container */
