--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -2,7 +2,8 @@
 
 
 header {
-  margin: 10px;
+  padding: 10px;
+  border-bottom: 1px solid white;
 }
 
 /* global styles */
@@ -89,6 +90,26 @@ main .history-View .history img {
   max-width: 300px;
   max-height: 200px;
 }
+
+/* update view */
+
+main .update-View {
+  width: 80%;
+  height: 350px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  margin-bottom: 30px;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: #f65f9e;
+}
+
+main .update-View form input{
+  padding: 5px;
+}
+
+
 
 
 /* footer */
