--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,5 +1,18 @@
 /* base */
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.wrapper {
+  min-height: 100%;
+
+  /* Equal to height of footer */
+  /* But also accounting for potential margin-bottom of last child */
+  margin-bottom: -60px;
+}
+  
 body {
   font-family: 'Open Sans', sans-serif;
   background-image: url('./img_assets/seamless-background-80s67-.jpg');
@@ -12,17 +25,16 @@ a {
 
 header {
   background-color: #2d374fea;
-
-}
-
-main {
-  /* background-color: lightgray; */
-  height: 400px;
 }
 
 footer {
   background-color: #2d374fea;
-  height: 80px;
+  width:100%; 
+  border: 1px solid white;
+}
+
+.footer, .push {
+  height: 60px;
 }
 
 h1 {
