added some responsiveness

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -11,7 +11,7 @@ a {
 }
 
 header {
-  background-color: #2d374fea;
+  background-color: #2d374f;
 
 }
 
@@ -21,12 +21,41 @@ main {
 }
 
 footer {
-  background-color: #2d374fea;
+  background-color: #2d374f;
   height: 80px;
 }
 
 h1 {
   font-family: 'Orbitron', sans-serif;
-  font-size: 25px;
+  font-size: 5vw;
   color: white;
+}
+
+h2 {
+  font-size: 3vw;
+}
+
+h3 {
+  font-size: 2vw;
+}
+
+p {
+  font-size: 20px;
+}
+
+a {
+  font-size: 25px;
+  /* text-decoration-line: none; */
+}
+
+label {
+  font-size: 25px;
+}
+
+input {
+  font-size: 25px;
+}
+
+button {
+  font-size: 25px;
 }
