css tweaks at the front projector

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -48,7 +48,7 @@ h1 {
 }
 
 h2 {
-  font-size: 3vw;
+  font-size: 35px;
 }
 
 h3 {
@@ -65,7 +65,9 @@ a {
 }
 
 label {
-  font-size: 25px;
+  text-align: center;
+  font-size: 35px;
+  margin: 10px;
 }
 
 input {
