--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -34,7 +34,27 @@ button, input {
   margin: auto;
 } */
 
-.link-icon {
-  width: 15px;
-  height: 15px;
+
+@media only screen and (min-width: 900px) {
+  /* header {
+  background-color: wheat;
+  } */
+
+  nav {
+    width: 100%;
+    /* display: block; */
+  }
+
+  
+  nav ul {
+    width: 100%;
+    /* float: right; */
+    text-align: center;
+  }
+
+  nav ul li {
+    /* float: right; */
+    display: inline;
+    /* background: black; */
+  }
 }
