--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -52,7 +52,7 @@ p {
   font-size: 20px;
 }
 
-a {
+a, input, button {
   font-size: 25px;
 }
 
@@ -62,10 +62,6 @@ label {
   margin: 10px;
 }
 
-input {
-  font-size: 25px;
-}
-
-button {
-  font-size: 25px;
+footer a {
+  font-size: 20px;
 }
